--- a/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
@@ -5,34 +5,62 @@
              xmlns:local="clr-namespace:Restaurant.Converters;assembly=Restaurant"
 						 xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
                           x:Class="Restaurant.Pages.FoodDetailPage" BackgroundColor="{StaticResource grayLight}">
-  <ScrollView x:Name="scrollView">
-    <Grid VerticalOptions="Fill">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="Auto"/>
-        <RowDefinition Height="*"/>
-        <RowDefinition Height="Auto"/>
-      </Grid.RowDefinitions>
-      <ContentView Padding="0,0,0,0">
-        <Image x:Name="photoImage" Source="{Binding SelectedFood.Picture}" Aspect="AspectFill"
-               HeightRequest="200" VerticalOptions="Center"
-               HorizontalOptions="Fill"/>
-
-      </ContentView>
-      <StackLayout Grid.Row="1" Orientation="Vertical" VerticalOptions="Fill" BackgroundColor="{StaticResource grayLight}">
-        <AbsoluteLayout Padding="24,8,24,0">
-          <Label Text="{Binding SelectedFood.Name}" TextColor="{StaticResource asphaltPrimary}" FontSize="Large" VerticalOptions="CenterAndExpand" />
-          <Label Text="{Binding SelectedFood.Description}" TextColor="{StaticResource asphaltPrimary}" FontSize="Small" VerticalOptions="CenterAndExpand" />
-        </AbsoluteLayout>
-        <Grid>
-          <StackLayout>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="200" x:Name="Row1Header"/>
+      <RowDefinition Height="*"/>
+    </Grid.RowDefinitions>
+    <Grid RowSpacing="0" ColumnSpacing="0" x:Name="HeaderView">
+      <Image
+          HorizontalOptions="FillAndExpand"
+          VerticalOptions="FillAndExpand"
+          Source="{Binding SelectedFood.Picture}"
+          Aspect="AspectFill"/>
+    </Grid>
+    <controls:ParallaxScrollView x:Name="MainScroll" Grid.RowSpan="2">
+      <Grid RowSpacing="0">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="200" x:Name="Row1Content"/>
+          <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid x:Name="MainStack"
+              VerticalOptions="End"
+              HorizontalOptions="FillAndExpand">
+          <Image Source="profile_pic_shadow.png"
+                 Aspect="AspectFill"
+                 HorizontalOptions="FillAndExpand"
+                 VerticalOptions="FillAndExpand"/>
+          <StackLayout
+              Spacing="0"
+              VerticalOptions="End"
+              HorizontalOptions="FillAndExpand">
+            <Label
+                Text="{Binding SelectedFood.Name}"
+                FontSize="18"
+                TextColor="White">
+              <Label.FontFamily>
+                <OnPlatform x:TypeArguments="x:String" Android="sans-serif-light" iOS="HelveticaNeue-Light"/>
+              </Label.FontFamily>
+            </Label>
+            <Label
+                x:Name="SpeakerTitle"
+                Text="{Binding SelectedFood.Description}"
+                FontSize="12"
+                TextColor="White"/>
           </StackLayout>
         </Grid>
-
-      </StackLayout>
-      <StackLayout Grid.Row="2">
-        <controls:FlatButton Text="Add to basket"></controls:FlatButton>
-      </StackLayout>
-    </Grid>
-
-  </ScrollView>
+        <StackLayout Grid.Row="1" Spacing="0">
+          <StackLayout Padding="20">
+            <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
+            <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
+            <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
+            <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
+            <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
+            <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
+            <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
+          </StackLayout>
+        </StackLayout>
+      </Grid>
+    </controls:ParallaxScrollView>
+  </Grid>
 </pages:FoodDetailPageXaml>
