--- a/Client/Restaurant.Client/Restaurant/Views/FoodsListView.xaml
+++ b/Client/Restaurant.Client/Restaurant/Views/FoodsListView.xaml
@@ -14,46 +14,32 @@
         <DataTemplate>
             <controls:CustomViewCell IsTransparentBackgroundWhenSelectedCell="True">
                 <ViewCell.View>
-                    <AbsoluteLayout>
-                        <StackLayout Padding="0,0,.5,.5"  AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
-                            <StackLayout StyleId="leagueRow" Orientation="Vertical" Padding="10" Spacing="0" VerticalOptions="FillAndExpand">
-                                <AbsoluteLayout HeightRequest="150">
-                                    <Image x:Name="photoImage" Source="{Binding Picture}" Aspect="AspectFill"	AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1"/>
-                                </AbsoluteLayout>
-                                <Grid BackgroundColor="White">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <StackLayout Padding="16,15" Spacing="4" Grid.Column="0"
-															 IsVisible="{Binding IsOrdered, Converter={x:Static converters:InverseBoolConverter.Instance}}">
-                                        <Label Text="{Binding Name}" FontSize="Large" TextColor="Black" VerticalOptions="CenterAndExpand" />
-                                        <Label Text="{Binding Description}" VerticalOptions="CenterAndExpand" TextColor="Black"/>
-                                        <Label Text="{Binding Price, StringFormat='\{0\} Somoni'}" FontSize="Large" TextColor="{StaticResource grayPrimary}" VerticalOptions="CenterAndExpand"/>
+                    <StackLayout Spacing="{DynamicResource CardSpacing}" 
+                                 Padding="{DynamicResource CardPadding}">
+                        <controls:CardView>
+                            <AbsoluteLayout>
+                                <StackLayout Padding="0,0,.5,.5"  AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
+                                    <StackLayout StyleId="leagueRow" Orientation="Vertical" Padding="10" Spacing="0" VerticalOptions="FillAndExpand">
+                                        <AbsoluteLayout HeightRequest="150">
+                                            <Image x:Name="photoImage" Source="{Binding Picture}" Aspect="AspectFill"	AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1"/>
+                                        </AbsoluteLayout>
+                                        <Grid BackgroundColor="White">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <StackLayout Padding="16,15" Spacing="4" Grid.Column="0"
+                                                         IsVisible="{Binding IsOrdered, Converter={x:Static converters:InverseBoolConverter.Instance}}">
+                                                <Label Text="{Binding Name}" FontSize="Large" TextColor="Black" VerticalOptions="CenterAndExpand" />
+                                                <Label Text="{Binding Description}" VerticalOptions="CenterAndExpand" TextColor="Black"/>
+                                                <Label Text="{Binding Price, StringFormat='\{0\} Somoni'}" FontSize="Large" TextColor="{StaticResource grayPrimary}" VerticalOptions="CenterAndExpand"/>
+                                            </StackLayout>
+                                        </Grid>
                                     </StackLayout>
-                                    
-                                    <!--<StackLayout Padding="16,20, 16, 30" VerticalOptions="Center" HorizontalOptions="Start" IsVisible="{Binding IsOrdered}">
-                                        <StackLayout Orientation="Vertical">
-                                            <Label Text="{Binding Quantity, StringFormat='Quantity: \{0\}'}" TextColor="Black" FontSize="Medium"/>
-                                            <Label Text="{Binding TotalPrice, StringFormat='Total Price: \{0\}'}" FontSize="Medium" TextColor="{StaticResource grayPrimary}" />
-                                        </StackLayout>
-                                        <Stepper Value="{Binding Quantity}" Minimum=".5"/>
-                                    </StackLayout>-->
-                                    <!--<StackLayout Grid.Column="1" Padding="5,10" VerticalOptions="Center" Spacing="4">
-                                        <Button Clicked="ActionButton_Clicked"
-																								BorderColor="{StaticResource indigoPinkAccent}">
-                                            <Button.HeightRequest>
-                                                <OnPlatform x:TypeArguments="x:Double" iOS="65"  Android="50" WinPhone="50"/>
-                                            </Button.HeightRequest>
-                                            <Button.WidthRequest>
-                                                <OnPlatform x:TypeArguments="x:Double" iOS="65"  Android="50" WinPhone="50"/>
-                                            </Button.WidthRequest>
-                                        </Button>
-                                    </StackLayout>-->
-                                </Grid>
-                            </StackLayout>
-                        </StackLayout>
-                    </AbsoluteLayout>
+                                </StackLayout>
+                            </AbsoluteLayout>
+                        </controls:CardView>
+                    </StackLayout>
                 </ViewCell.View>
             </controls:CustomViewCell>
         </DataTemplate>
