--- a/Client/Restaurant.Client/Restaurant/Controls/FooterDivider.xaml
+++ b/Client/Restaurant.Client/Restaurant/Controls/FooterDivider.xaml
@@ -2,13 +2,13 @@
 <ContentView 
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-    x:Class="Restaurant.Controls.HeaderDivider">
+    x:Class="Restaurant.Controls.FooterDivider">
     <ContentView.Content>
         <BoxView 
             HorizontalOptions="FillAndExpand" 
             BackgroundColor="{DynamicResource Divider}">
             <BoxView.HeightRequest>
-                <OnPlatform x:TypeArguments="x:Double" iOS="0" Android="1" WinPhone="1"/>
+                <OnPlatform x:TypeArguments="x:Double" iOS="0.5" Android="0" WinPhone="1"/>
             </BoxView.HeightRequest>
         </BoxView>
     </ContentView.Content>
