--- a/Web-Client/restaurant-manager/src/app/app.component.html
+++ b/Web-Client/restaurant-manager/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-menu></app-menu>
-<div class="pusher" style="padding-left:150px;">
+<div class="pusher" style="padding:20px 0 0 160px;">
   <div class="ui container">
     <router-outlet></router-outlet>
   </div>  
