--- a/Web-Client/restaurant-manager/src/app/components/foods/add.component.html
+++ b/Web-Client/restaurant-manager/src/app/components/foods/add.component.html
@@ -1,19 +1,36 @@
 <div class="ui raised very padded text container segment">
   <form class="ui form">
     <div class="field">
-      <label>First Name</label>
-      <input type="text" name="first-name" placeholder="First Name">
+      <label>Name</label>
+      <input type="text" name="name" placeholder="Name">
     </div>
     <div class="field">
-      <label>Last Name</label>
-      <input type="text" name="last-name" placeholder="Last Name">
+      <label>Description</label>
+      <input type="text" name="description" placeholder="Description">
     </div>
-    <div class="field">
-      <div class="ui checkbox">
-        <input type="checkbox" tabindex="0" class="hidden">
-        <label>I agree to the Terms and Conditions</label>
+
+    <div class="two fields">
+
+      <div class="field">
+        <label>Price</label>
+        <input type="text" name="price" placeholder="Price">
       </div>
+
+      <div class="field">
+        <label>Category</label>
+        <!-- <select [(ngModel)]="question.category" class="ui fluid dropdown">
+            <option *ngFor="let category of categories" [ngValue]="category">{{category.name}}</option>
+        </select> -->
+      </div>
+
     </div>
-    <button class="ui button" type="submit">Submit</button>
+
+    <div class="field">
+      <label>Picture</label>
+      <input type="file">
+    </div>
+
+    <button class="ui button blue" type="submit">Save</button>
+    <button class="ui button" type="submit">Cancel</button>
   </form>
 </div>
