angular base service interface implementation
Former-commit-id: efc09bc1c55a386cb50417785ff99a32ded4c0bb

--- a/Web-Client/restaurant-manager/src/app/components/foods/list.component.html
+++ b/Web-Client/restaurant-manager/src/app/components/foods/list.component.html
@@ -3,15 +3,19 @@
   <table class="ui red celled table">
     <thead class="full-width">
       <tr>
+        <th>Picture</th>
         <th>Name</th>
         <th>Description</th>
         <th>Price</th>
         <th>Category</th>
-        <th>Picture</th>
+        <th>Edit/Delete</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let food of foods">
+        <td>
+          <img [src]="food.picture" class="ui mini rounded image">
+        </td>
 
         <td>{{food.name}}</td>
 
@@ -19,17 +23,14 @@
 
         <td>{{food.price}}</td>
 
-        <td>{{food.category?.name}}</td>
+        <td><b>{{food.category?.name}}</b></td>
 
-        <td>
-          <img [src]="food.picture" class="ui mini rounded image">
-        </td>
-
+        <td><a href="#">Edit</a>/<a href="#">Delete</a> </td>
       </tr>
     </tbody>
     <tfoot class="full-width">
       <tr>
-        <th colspan="5">
+        <th colspan="6">
           <a routerLink="/foods/create" class="ui right floated small primary labeled icon button">
             <i class="plus icon"></i> Create food
         </a>
