crud operations for all tables
Former-commit-id: de06761bb98c0cf29e616f2bb7e742f311714d76

--- a/Web-Client/restaurant-manager/src/app/components/menu/menu.component.html
+++ b/Web-Client/restaurant-manager/src/app/components/menu/menu.component.html
@@ -1,9 +1,13 @@
 <div class="ui vertical left visible sidebar menu">
   <div class="item">
-    <img class="ui avatar image" src="/images/avatar/small/tom.jpg">
-    <a href="#"><b>Admin</b></a>
+    <img class="ui mini circular image" src="/images/avatar2/small/molly.png">
+    <div class="content">
+      <div class="ui sub header">Molly</div>
+      Coordinator
+    </div>
   </div>
   <a routerLink="/foods" routerLinkActive="active" class="item">Foods</a>
+  <a routerLink="/categories" routerLinkActive="active" class="item">Categories</a>
   <a href="#" class="item">Daily Eatings</a>
   <a href="#" class="item">Users</a>
 </div>
