--- a/Web-Client/restaurant-manager/src/app/components/menu/menu.component.html
+++ b/Web-Client/restaurant-manager/src/app/components/menu/menu.component.html
@@ -1,9 +1,11 @@
-<div class="ui vertical left visible sidebar menu">
-  <div class="item">
-    <img class="ui mini circular image" src="/images/avatar2/small/molly.png">
-    <div class="content">
-      <div class="ui sub header">Molly</div>
-      Coordinator
+<div class="ui vertical left visible sidebar inverted menu">
+  <div class="ui horizontal list" style="padding:20px;">
+    <div class="item">
+      <img class="ui mini circular image" src="/assets/steve.jpg">
+      <div class="content">
+        <div class="ui inverted grey">Welcome</div>
+        Admin
+      </div>
     </div>
   </div>
   <a routerLink="/foods" routerLinkActive="active" class="item">Foods</a>
