Big changes Xamarin.Forms update Transparent Toolbar and Status bar on Food Details page Connection to Azure testing with real data Server side changes
Former-commit-id: 27d0646d2012a9839b925c3fb810a77c09891a81

--- a/Client/Restaurant.Client/Restaurant/Controls/HeaderDivider.xaml
+++ b/Client/Restaurant.Client/Restaurant/Controls/HeaderDivider.xaml
@@ -5,8 +5,7 @@
     x:Class="Restaurant.Controls.HeaderDivider">
     <ContentView.Content>
         <BoxView 
-            HorizontalOptions="FillAndExpand" 
-            BackgroundColor="{DynamicResource Divider}">
+            HorizontalOptions="FillAndExpand" BackgroundColor="{DynamicResource Divider}">
             <BoxView.HeightRequest>
                 <OnPlatform x:TypeArguments="x:Double" iOS="0" Android="1" WinPhone="1"/>
             </BoxView.HeightRequest>
