--- a/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/FoodDetailPage.xaml
@@ -2,73 +2,75 @@
 <pages:FoodDetailPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Restaurant.Pages;assembly=Restaurant"
-             xmlns:local="clr-namespace:Restaurant.Converters;assembly=Restaurant"
 			       xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
              x:Class="Restaurant.Pages.FoodDetailPage" BackgroundColor="{StaticResource WindowBackground}">
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="300" x:Name="Row1Header"/>
-      <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    <Grid RowSpacing="0" ColumnSpacing="0" x:Name="HeaderView">
-      <Image HorizontalOptions="FillAndExpand"
-             VerticalOptions="FillAndExpand"
-             Source="{Binding SelectedFood.Picture}"
-             Aspect="AspectFill"/>
-    </Grid>
-    
-    <controls:FloatingActionButton WidthRequest="50" HeightRequest="50" Grid.Row="1" Margin="20,30" 
-                                   VerticalOptions="EndAndExpand" HorizontalOptions="EndAndExpand"
-                                   ButtonColor="#E91E63" Image="ic_plus.png"/>
+  <pages:FoodDetailPage.ToolbarItems>
+    <!--<ToolbarItem Icon="ic_favorite_white_24dp.png"></ToolbarItem>-->
+  </pages:FoodDetailPage.ToolbarItems>
+  <AbsoluteLayout>
+    <Grid BackgroundColor="White">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="300" />
+        <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
 
-    <controls:ParallaxScrollView x:Name="MainScroll" Grid.RowSpan="2">
-      <AbsoluteLayout>
-        <Grid RowSpacing="0">
-          <Grid.RowDefinitions>
-            <RowDefinition Height="300" x:Name="Row1Content"/>
-            <RowDefinition Height="*"/>
-          </Grid.RowDefinitions>
+      <Grid RowSpacing="0" ColumnSpacing="0"  x:Name="HeaderView">
+        <Image HorizontalOptions="FillAndExpand"
+               VerticalOptions="FillAndExpand"
+               Source="{Binding SelectedFood.Picture}"
+               Aspect="AspectFill"/>
+        
+        <Grid Opacity=".3" BackgroundColor="Black"></Grid>
 
-          <Grid Opacity=".3" BackgroundColor="Black">
+      </Grid>
 
-          </Grid>
-
-          <Grid x:Name="MainStack"
-                VerticalOptions="End"
-                HorizontalOptions="FillAndExpand">
-
-            <Image Source="profile_pic_shadow.png"
-                   Aspect="AspectFill"
-                   HorizontalOptions="FillAndExpand"
-                   VerticalOptions="FillAndExpand"/>
-
-            <StackLayout Padding="10"
-                         Spacing="0"
-                         VerticalOptions="End"
-                         HorizontalOptions="FillAndExpand">
-
+      <StackLayout Grid.Row="1">
+        <StackLayout Padding="10">
+          <Grid>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="*"/>
+              <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            
+            <StackLayout Spacing="0" Padding="10"> 
               <Label Text="{Binding SelectedFood.Name}"
                      FontSize="18"
-                     TextColor="White">
+                     TextColor="Black">
                 <Label.FontFamily>
                   <OnPlatform x:TypeArguments="x:String" Android="sans-serif-light" iOS="HelveticaNeue-Light"/>
                 </Label.FontFamily>
               </Label>
-              <Label x:Name="SpeakerTitle"
-                     Text="{Binding SelectedFood.Description}"
+              <Label Text="{Binding SelectedFood.Description}"
                      FontSize="12"
-                     TextColor="White"/>
+                     TextColor="{StaticResource grayDark}"/>
+
+            </StackLayout>
+            
+            <StackLayout Grid.Column="1" Padding="10">
+              <Label Text="{Binding SelectedFood.Price, StringFormat='\{0\} $'}" FontSize="16" TextColor="{StaticResource  bluePrimary}" VerticalOptions="CenterAndExpand"/>
             </StackLayout>
           </Grid>
-          <StackLayout Grid.Row="1" Spacing="0" Padding="10" BackgroundColor="{StaticResource WindowBackground}">
+        </StackLayout>
 
-            <controls:CardView Padding="20">
-              <Label FontSize="20" Text="Excepteur aliquip ut et nisi magna sunt sint do cillum excepteur sint sint. Officia ea magna laboris cupidatat nisi commodo labore magna ut magna quis id ipsum magna. Adipisicing do labore laboris ut do nisi duis consectetur."></Label>
-            </controls:CardView>
-          </StackLayout>
-        </Grid>
+        <controls:HeaderDivider />
 
-      </AbsoluteLayout>
-    </controls:ParallaxScrollView>
-  </Grid>
+      </StackLayout>
+    </Grid>
+
+    <controls:FloatingActionButton WidthRequest="50" HeightRequest="50" x:Name="AddButton"
+                                   AbsoluteLayout.LayoutBounds=".9, .5, 50, 50"
+                                   AbsoluteLayout.LayoutFlags="PositionProportional"
+                                   ButtonColor="Red" Image="ic_favorite_white_24dp.png">
+      <controls:FloatingActionButton.IsVisible>
+        <OnPlatform x:TypeArguments="x:Boolean">
+          <On Platform="Android" Value="True"/>
+          <On Platform="iOS" Value="False"/>
+          <On Platform="UWP" Value="False"/>
+        </OnPlatform>
+      </controls:FloatingActionButton.IsVisible>
+
+    </controls:FloatingActionButton>
+
+  </AbsoluteLayout>
+
 </pages:FoodDetailPageXaml>
