--- a/Client/Restaurant.Client/Restaurant/Pages/Welcome/SignUpPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/Welcome/SignUpPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<local:SignUpPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
+<welcome:SignUpPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Restaurant.Pages.SignUpPage"
-             xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
-             xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant">
-  <local:SignUpPageXaml.Content>
+             x:Class="Restaurant.Pages.Welcome.SignUpPage"
+             xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
+             xmlns:welcome="clr-namespace:Restaurant.Pages.Welcome;assembly=Restaurant">
+  <welcome:SignUpPageXaml.Content>
     <StackLayout VerticalOptions="Center" Padding="25">
       <StackLayout Orientation="Vertical" x:Name="regesterStack">
 
@@ -22,7 +22,10 @@
           </Grid>
           <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
             <ContentView.HeightRequest>
-              <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
+              <OnPlatform x:TypeArguments="x:Double">
+                  <On Platform="Android">0</On>
+                  <On Platform="iOS">1</On>
+              </OnPlatform>
             </ContentView.HeightRequest>
           </ContentView>
         </StackLayout>
@@ -41,7 +44,10 @@
           </Grid>
           <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
             <ContentView.HeightRequest>
-              <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
+              <OnPlatform x:TypeArguments="x:Double">
+                  <On Platform="Android">0</On>
+                  <On Platform="iOS">1</On>
+              </OnPlatform>
             </ContentView.HeightRequest>
           </ContentView>
         </StackLayout>
@@ -58,7 +64,10 @@
           </Grid>
           <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
             <ContentView.HeightRequest>
-              <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
+              <OnPlatform x:TypeArguments="x:Double">
+                  <On Platform="Android">0</On>
+                  <On Platform="iOS">1</On>
+              </OnPlatform>
             </ContentView.HeightRequest>
           </ContentView>
         </StackLayout>
@@ -75,7 +84,10 @@
           </Grid>
           <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
             <ContentView.HeightRequest>
-              <OnPlatform x:TypeArguments="x:Double" iOS="1"  Android="0"/>
+              <OnPlatform x:TypeArguments="x:Double">
+                  <On Platform="Android">0</On>
+                  <On Platform="iOS">1</On>
+              </OnPlatform>
             </ContentView.HeightRequest>
           </ContentView>
         </StackLayout>
@@ -90,5 +102,5 @@
         <ActivityIndicator VerticalOptions="Center" IsRunning="{Binding IsLoading}"></ActivityIndicator>
       </StackLayout>
     </StackLayout>
-  </local:SignUpPageXaml.Content>
-</local:SignUpPageXaml>
+  </welcome:SignUpPageXaml.Content>
+</welcome:SignUpPageXaml>
